--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waffle (1.3.90~git20140417.a0a0fdc-1) experimental; urgency=low
+
+  * Adjust version number to be based on the git commit
+
+ -- Jordan Justen <jordan.l.justen@intel.com>  Thu, 17 Apr 2014 23:06:51 -0700
+
 waffle (1.3.90) unstable; urgency=low
 
   * Bump version to match waffle's current 1.3.90 version number
