--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+waffle (1.3.90+git20140426.f13bcdc-1) experimental; urgency=low
+
+  * Adjust version number to be based on the git commit
+
+ -- Jordan Justen <jordan.l.justen@intel.com>  Sat, 26 Apr 2014 20:24:12 -0700
+
 waffle (1.3.90) unstable; urgency=low
 
   * Bump version to match waffle's current 1.3.90 version number
